Formatted remaining headings, created appendix